--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ fieldset {
 }
 body{
     background-color: aquamarine;
+    
 }
 #eventDetails {
     font-weight: bold;
@@ -36,10 +37,10 @@ body{
 #title {
     margin-left: 102px;
 }
-#dates {
+#eventDateRange1 {
     margin-left: 95px;
 }
-#pdate {
+#eventPostDate {
     margin-left: 93px;
 }
 
