--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ fieldset {
     height: 480px;
     margin: auto;
     margin-top: 40px;
-    background-color: antiquewhite;
+    background-color: white;
     font-weight: bold;
 }
 body{
