--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,20 @@ fieldset {
     font-weight: bold;
 }
 body{
-    background-color: aquamarine;
-    
+  width: 100%;
+  height: 100%;
+  animation: pulse 10s infinite;
 }
+
+@keyframes pulse {
+    50% {
+      background-color: #99FFCC;
+    }
+    100% {
+      background-color: #CCFFFF;
+    }
+}
+
 #eventDetails {
     font-weight: bold;
     font-size: 30px;
